--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <a href="#" id="Hex">Hex <i class="bi bi-chevron-down cjump"></i></a>
                 <a href="#" id="Octa">Octa <i class="bi bi-chevron-down cjump"></i></a>
             </nav>
-        <div id="div-in" class="data">
-            <p>Entrada: </p> <input type="text" id="entrada">
+        <div class="data">
+            <p class="p-txt">Entrada: </p> <input type="text" id="entrada">
         </div>
             <p class="p-op">Selecione o tipo de saída</p>
             <nav class="op">
@@ -32,8 +32,8 @@
                 <a href="#" id="Hex">Hex <i class="bi bi-chevron-down cjump"></i></a>
                 <a href="#" id="Octa">Octa <i class="bi bi-chevron-down cjump"></i></a>
             </nav>
-        <div id="div-out" class="data">
-            <p>Saída: </p> <p id="saida">0000000</p>
+        <div  class="data">
+            <p class="p-txt">Saída: </p> <p id="saida">0000000</p>
         </div>
     </main>
     <footer>
